# bls12-381

./: CMakeLists.txt  LICENSE  Makefile  README.md  arithmetic.cpp  bls12_381.hpp  fp.cpp  fp.hpp  g.cpp  g.hpp  pairing.cpp  pairing.hpp  scalar.cpp  scalar.hpp  sha256.cpp  sha256.hpp  signatures.cpp  signatures.hpp  test.cpp
.github/workflows/: build.yaml
bench/: CMakeLists.txt  chia_bench.cpp  eth_bench.cpp
include/: arithmetic.hpp  bls12-381.hpp  bls12_381.hpp  fp.hpp  g.hpp  groth16.hpp  pairing.hpp  scalar.hpp  signatures.hpp  span.h
include/bls12-381/: arithmetic.hpp  bls12-381.hpp  fp.hpp  g.hpp  pairing.hpp  scalar.hpp  signatures.hpp
include/nonstd/: span.hpp
src/: CMakeLists.txt  arithmetic.cpp  arithmetic.s  fp.cpp  g.cpp  groth16.cpp  pairing.cpp  scalar.cpp  sha256.cpp  sha256.hpp  signatures.cpp
test/: CMakeLists.txt  test_vectors.inc  unittests.cpp
